Tests/Neg/UndeclaredIds/UndeclaredEvent3.p
main ghost machine Foo {
    start state S1 {
        defer Bar;
        entry {
        }
    }   
}
